--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Baitap01"
         tools:targetApi="31">
         <activity
+            android:name=".PerfectSquareActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PrimeNumberActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AnThanhTieuDeAndroid"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
